--- a/test.html
+++ b/test.html
@@ -37,10 +37,14 @@
             height: 100%;
             background-color: #e74c3c;
         }
+
+        .p1{width: 100px; height: 100px; background-color: red;}
+        .p2{width: 100px; height: 100px; background-color: blue; transform: translate(50%, -50%); mix-blend-mode: multiply;}
     </style>
 </head>
 <body>
-
+    <p class="p1"></p>
+    <p class="p2"></p>
     <div class="parent">
         <div class="child">
             <!-- ScrollTrigger에 의해 pin될 자식 요소 -->
