--- a/index.html
+++ b/index.html
@@ -322,6 +322,14 @@
                                     <img src="./img/laundrie_03.jpg" alt="새로운 공간의 제안">
                                     <span class="arrow3"></span>
                                 </a>
+                                <!-- 
+
+                                    <div>
+                                        런드리룸 <div class="line"><span class="gsap">infinite</span></div>을<br>
+                                        <span>비스포크</span>
+                                        <span>하다.</span>
+                                    </div>
+                                 -->
                                 <div class="txt">
                                     <h4>심플렉스디자인</h4>
                                     <span class="para">
@@ -338,7 +346,7 @@
                 </div>
             </div><!--section2-->
             <div class="sector section3">
-                <div class="style"> INTERIOR&STYLE</div>
+                <div class="style"> STYLE</div>
                 <div class="title">
                     <div class="text">
                         <div class="up">
