--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
-<body>
-   
+<body>  
     <div id="wrapper">
         <button class="arrow0">
             <span></span>
@@ -346,7 +345,7 @@
                 </div>
             </div><!--section2-->
             <div class="sector section3">
-                <div class="style"> STYLE</div>
+                <div class="style">STYLE</div>
                 <div class="title">
                     <div class="text">
                         <div class="up">
@@ -564,90 +563,91 @@
              </div><!--section5-->
         </section>  
         <footer>
-           <div class="footer-content">
-            <div class="footer-inner">
-                <div class="info-detail">
-                    <p>
-                        <span>삼성전자 주식회사 대표이사 : 한종희 </span>
-                        <span>사업자등록번호 : 124-81-00998</span>
-                        <span><a href="#" class="comp">사업자 정보확인</a></span>
-                        <span>통신판매업 신고 : 2000-경기수원-0515</span>
-                    </p>
-                    <p class="gap">
-                        <span>사업장주소 : 경기도 수원시 영통구 삼성로 129(매탄동) </span>
-                        <span>호스팅서비스사업자 : 한국아이비엠(주) </span>
-                        <span>대표번호 : 02-2255-0114 </span>
-                        <span>제품/서비스/멤버십: 1588-3366(통화요금 : 발신자부담) </span>
-                        <span>구매문의 : 1588-6084 </span>
-                        <span>e식품관 문의 : 1811-9228</span>
-                    </p><!--gap-->
-                    <p>본 사이트에서 판매되는 상품 중에는 등록된 개별 판매자가 판매하는 상품이 포함되어 있습니다.</p>
-                    <div class="dis-resol">
-                        <p>개별 판매자 판매 상품의 경우 삼성전자(주)는 통신판매중개업자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 상품, 거래정보 및 거래 등에 대해 책임을 지지 않습니다.</p>
-                        <a href="" class="comp">소비자분쟁해결기준</a>
-                    </div><!--resol-->
-                    <p>본 사이트의 컨텐츠는 저작권법의 보호를 받는 바 무단 전재, 복사, 배포 등을 금합니다.</p>
-                </div><!--info-detail-->
-            </div><!--footer-inner-->
-           </div><!--footer-content-->
-           <div class="footer-content">
-            <div class="footer-inner copyrightGroup">
-                <div class="copyrightBox">
-                   <p class="copyright">Copyright © 1995-2024 Samsung. All Rights Reserved.</p>
-                   <ul class="mark-box">
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                   </ul><!--mark-box-->
-                </div><!--copyrightBox-->
-            </div><!--footer-inner-->
-           </div><!--footer-content-->
-           <div class="footer-content">
-            <div class="footer-inner btnBottomGroup">
-                <div class="cs-btn">
-                    <ul class="korean">
-                        <li><a href="#">한국/한국어</a></li>
-                    </ul><!--korean-->
-                    <ul>
-                        <li><a href="#">이메일 무단 수집거부</a></li>
-                        <li><a href="#">아이디어 정책</a></li>
-                        <li><a href="#">사이트맵</a></li>
-                    </ul>
-                </div><!--cs-btn-->
-                <div class="clause-links">
-                    <div class="dropList01 drop">
-                        <button class="droplist-btn">이용약관</button>
-                        <ul class="droplist">
-                            <li><a href="#">삼성전자 대표사이트 이용약관</a></li>
-                            <li><a href="#">삼성전자 멤버십 이용약관</a></li>
-                            <li><a href="#">SAMSUNG 서비스 이용약관</a></li>
-                        </ul><!--droplist-->
-                    </div><!--dropList01-->
-                    <div class="dropList02 drop">
-                        <button class="droplist-btn">개인청보처리방침</button>
-                        <ul class="droplist">
-                            <li><a href="#">삼성닷컴 개인정보처리방침</a></li>
-                            <li><a href="#">삼성닷컴 이벤트 개인정보처리방침</a></li>
-                            <li><a href="#">삼성전자멤버십 개인정보처리방침</a></li>
-                            <li><a href="#">경력채용 개인정보처리방침</a></li>
-                        </ul><!--droplist-->
-                    </div><!--dropList02-->
-                </div><!--clause-links-->
-                <div class="link-box">
-                    <div class="wrap-sns">
-                        <span class="tit">삼성전자의 다양한 소식을 만나보세요!</span>
+            <div class="footer-content">
+                <div class="footer-inner">
+                    <div class="info-detail">
+                        <p>
+                            <span>삼성전자 주식회사 대표이사 : 한종희 </span>
+                            <span>사업자등록번호 : 124-81-00998</span>
+                            <span><a href="#" class="comp">사업자 정보확인</a></span>
+                            <span>통신판매업 신고 : 2000-경기수원-0515</span>
+                        </p>
+                        <p class="gap">
+                            <span>사업장주소 : 경기도 수원시 영통구 삼성로 129(매탄동) </span>
+                            <span>호스팅서비스사업자 : 한국아이비엠(주) </span>
+                            <span>대표번호 : 02-2255-0114 </span>
+                            <span>제품/서비스/멤버십: 1588-3366(통화요금 : 발신자부담) </span>
+                            <span>구매문의 : 1588-6084 </span>
+                            <span>e식품관 문의 : 1811-9228</span>
+                        </p><!--gap-->
+                        <p>본 사이트에서 판매되는 상품 중에는 등록된 개별 판매자가 판매하는 상품이 포함되어 있습니다.</p>
+                        <div class="dis-resol">
+                            <p>개별 판매자 판매 상품의 경우 삼성전자(주)는 통신판매중개업자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 상품, 거래정보 및 거래 등에 대해 책임을 지지 않습니다.</p>
+                            <a href="" class="comp">소비자분쟁해결기준</a>
+                        </div><!--resol-->
+                        <p>본 사이트의 컨텐츠는 저작권법의 보호를 받는 바 무단 전재, 복사, 배포 등을 금합니다.</p>
+                    </div><!--info-detail-->
+                </div><!--footer-inner-->
+            </div><!--footer-content-->
+            <div class="footer-content">
+                <div class="footer-inner copyrightGroup">
+                    <div class="copyrightBox">
+                    <p class="copyright">Copyright © 1995-2024 Samsung. All Rights Reserved.</p>
+                    <ul class="mark-box">
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                    </ul><!--mark-box-->
+                    </div><!--copyrightBox-->
+                </div><!--footer-inner-->
+            </div><!--footer-content-->
+            <div class="footer-content">
+                <div class="footer-inner btnBottomGroup">
+                    <div class="cs-btn">
+                        <ul class="korean">
+                            <li><a href="#">한국/한국어</a></li>
+                        </ul><!--korean-->
                         <ul>
-                            <li><a href="#"><img src="./img/facebook.gif" alt=""></a></li>
-                            <li><a href="#"><img src="./img/yutube.gif" alt=""></a></li>
-                            <li><a href="#"><img src="./img/insta.gif" alt=""></a></li>
-                            <li><a href="#"><img src="./img/kakao.gif" alt=""></a></li>
-                            <li><a href="#"><img src="./img/X.gif" alt=""></a></li>
+                            <li><a href="#">이메일 무단 수집거부</a></li>
+                            <li><a href="#">아이디어 정책</a></li>
+                            <li><a href="#">사이트맵</a></li>
                         </ul>
-                    </div><!--wrap-sns-->
-                </div>
-            </div><!--footer-inner-->
-        </div><!--footer-content-->
+                    </div><!--cs-btn-->
+                    <div class="clause-links">
+                        <div class="dropList01 drop">
+                            <button class="droplist-btn">이용약관</button>
+                            <ul class="droplist">
+                                <li><a href="#">삼성전자 대표사이트 이용약관</a></li>
+                                <li><a href="#">삼성전자 멤버십 이용약관</a></li>
+                                <li><a href="#">SAMSUNG 서비스 이용약관</a></li>
+                            </ul><!--droplist-->
+                        </div><!--dropList01-->
+                        <div class="dropList02 drop">
+                            <button class="droplist-btn">개인청보처리방침</button>
+                            <ul class="droplist">
+                                <li><a href="#">삼성닷컴 개인정보처리방침</a></li>
+                                <li><a href="#">삼성닷컴 이벤트 개인정보처리방침</a></li>
+                                <li><a href="#">삼성전자멤버십 개인정보처리방침</a></li>
+                                <li><a href="#">경력채용 개인정보처리방침</a></li>
+                            </ul><!--droplist-->
+                        </div><!--dropList02-->
+                    </div><!--clause-links-->
+                    <div class="link-box">
+                        <div class="wrap-sns">
+                            <span class="tit">삼성전자의 다양한 소식을 만나보세요!</span>
+                            <ul>
+                                <li><a href="#"><img src="./img/facebook.gif" alt=""></a></li>
+                                <li><a href="#"><img src="./img/yutube.gif" alt=""></a></li>
+                                <li><a href="#"><img src="./img/insta.gif" alt=""></a></li>
+                                <li><a href="#"><img src="./img/kakao.gif" alt=""></a></li>
+                                <li><a href="#"><img src="./img/X.gif" alt=""></a></li>
+                            </ul>
+                        </div><!--wrap-sns-->
+                    </div><!--link_box-->>
+                </div><!--footer-inner-->
+            </div><!--footer-content-->
+        </footer>
     </div>
     
 
