--- a/index.html
+++ b/index.html
@@ -109,19 +109,30 @@
         </div><!--banner-->
         <section>
             <div class="sector section1">
-                <div class="infi">INFINITE</div>
+                <!-- <div class="infi">INFINITE</div> -->
                 <div class="title">
-                   <div class="text">
+                   <!-- <div class="text">
                         <div class="up">
                             <span>키친</span>
                             <span class="line1"></span>
                             <span class="next">을</span>
-                        </div><!--up-->
+                        </div>
+                        <div class="down">
+                            <span class="bold">BESPOKE</span>
+                            <span>하다</span>
+                        </div>
+                    </div> -->
+                    <div class="text">
+                        <div class="up">키친
+                            <div class="line">
+                                <span class="infi">INFINITE</span>
+                                </div>을<br />
+                            </div><!--up-->
                         <div class="down">
                             <span class="bold">BESPOKE</span>
                             <span>하다</span>
                         </div><!--down-->
-                    </div>
+                    </div><!--text-->
                     <a href="#" class="arrow2">
                         <span>더 알아보기</span>
                     </a><!--arrow-->
