--- a/index.html
+++ b/index.html
@@ -255,16 +255,15 @@
                 </div><!--row2-->
             </div><!--section1-->
             <div class="sector section2">
-                <div class="cus">CUSTOM</div>
                 <div class="title">
                     <div class="text">
-                        <div class="up">
-                            <span>런드리룸</span>
-                            <span class="line4"></span>
-                            <span class="next">을</span>
-                        </div><!--up-->
+                        <div class="up">런드리룸
+                            <div class="line">
+                                <span class="cus">CUSTOM</span>
+                                </div>을<br />
+                            </div><!--up-->
                         <div class="down">
-                         <p class="bold">BE<span>SOPKE</span></p>
+                            <span class="bold">BESPOKE</span>
                             <span>하다</span>
                         </div><!--down-->
                     </div><!--text-->
@@ -356,14 +355,13 @@
                 </div>
             </div><!--section2-->
             <div class="sector section3">
-                <div class="style">STYLE</div>
                 <div class="title">
                     <div class="text">
-                        <div class="up">
-                            <span>리빙</span>
-                            <span class="line5"></span>
-                            <span class="next">을</span>
-                        </div><!--up-->
+                        <div class="up">리빙
+                            <div class="line">
+                                <span class="style">STYLE</span>
+                                </div>을<br />
+                            </div><!--up-->
                         <div class="down">
                             <span class="bold">BESPOKE</span>
                             <span>하다</span>
