--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                         <div class="sec1" 
                          data-aos="fade-right"
                          data-aos-easing ="ease-out-expo"
-                         data-aos-anchor-placement="top-center"
-                         >
+                         data-aos-anchor-placement="top-center">
                          <!--data-aos-anchor-placement="top-center" -->
                             <a href="#"><img src="./img/kichen_01.jpg" alt=""></a>
                         </div><!--sec1-->
@@ -603,10 +602,10 @@
                     <div class="copyrightBox">
                     <p class="copyright">Copyright © 1995-2024 Samsung. All Rights Reserved.</p>
                     <ul class="mark-box">
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
-                        <li><a href="#"></a></li>
+                        <li><a href="#"><img src="./img/footer_icon01.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/footer_icon02.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/footer_icon03.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/footer_icon04.png" alt=""></a></li>
                     </ul><!--mark-box-->
                     </div><!--copyrightBox-->
                 </div><!--footer-inner-->
@@ -653,7 +652,7 @@
                                 <li><a href="#"><img src="./img/X.gif" alt=""></a></li>
                             </ul>
                         </div><!--wrap-sns-->
-                    </div><!--link_box-->>
+                    </div><!--link_box-->
                 </div><!--footer-inner-->
             </div><!--footer-content-->
         </footer>
