--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
              </div><!--section4-->
              <div class="section5">
                 <div class="bottom_banner">
-                    <img src="./img/bottom_banner.jpg" alt="">
+                    <img src="./img/bottom_banner.jpg" alt="디지털 플라자 강남본점 5충 PRISM 360">
                     <div class="title">
                         <h3>직접 체험해보세요.</h3>
                         <p>디지털 플라자 강남본점 5층 PRISM 360</p>
@@ -603,10 +603,10 @@
                     <div class="copyrightBox">
                     <p class="copyright">Copyright © 1995-2024 Samsung. All Rights Reserved.</p>
                     <ul class="mark-box">
-                        <li><a href="#"><img src="./img/footer_icon01.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/footer_icon02.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/footer_icon03.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/footer_icon04.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/footer_icon01.png" alt="디지털고객경험지수"></a></li>
+                        <li><a href="#"><img src="./img/footer_icon02.png" alt="공정거래위원회"></a></li>
+                        <li><a href="#"><img src="./img/footer_icon03.png" alt="과학기술정보통신부"></a></li>
+                        <li><a href="#"><img src="./img/footer_icon04.png" alt="개인정보보호우수웹사이트"></a></li>
                     </ul><!--mark-box-->
                     </div><!--copyrightBox-->
                 </div><!--footer-inner-->
@@ -646,11 +646,11 @@
                         <div class="wrap-sns">
                             <span class="tit">삼성전자의 다양한 소식을 만나보세요!</span>
                             <ul>
-                                <li><a href="#"><img src="./img/facebook.gif" alt=""></a></li>
-                                <li><a href="#"><img src="./img/yutube.gif" alt=""></a></li>
-                                <li><a href="#"><img src="./img/insta.gif" alt=""></a></li>
-                                <li><a href="#"><img src="./img/kakao.gif" alt=""></a></li>
-                                <li><a href="#"><img src="./img/X.gif" alt=""></a></li>
+                                <li><a href="#"><img src="./img/facebook.gif" alt="페이스북"></a></li>
+                                <li><a href="#"><img src="./img/yutube.gif" alt="유튜브"></a></li>
+                                <li><a href="#"><img src="./img/insta.gif" alt="인스타그램"></a></li>
+                                <li><a href="#"><img src="./img/kakao.gif" alt="카카오"></a></li>
+                                <li><a href="#"><img src="./img/X.gif" alt="엑스"></a></li>
                             </ul>
                         </div><!--wrap-sns-->
                     </div><!--link_box-->
